Bug 339477 - Cannot drag applications to the desktop from search
Summary: Cannot drag applications to the desktop from search
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) (show other bugs)
Version: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-28 14:58 UTC by Kai Uwe Broulik
Modified: 2014-10-01 11:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2014-09-28 14:58:44 UTC
In Kickoff you can drag applications from the menu to your desktop and it will create an icon plasmoid for that. That does not work in the search, however.

Reproducible: Always

Steps to Reproduce:
1. Open kickoff
2. Search for "dolphin"
3. Try to drag resulting entry to desktop

Actual Results:  
Nothing happens

Expected Results:  
An icon plasmoid appears on the desktop
Comment 1 Marco Martin 2014-10-01 09:54:42 UTC
Git commit 1e7382b7bc75ada7b21e7e74349dfca5bfd0d3f1 by Marco Martin.
Committed on 01/10/2014 at 09:52.
Pushed by mart into branch 'master'.

use the runner match querydata if available

M  +1    -0    applets/kickoff/core/kickoffmodel.cpp
M  +6    -1    applets/kickoff/core/krunnermodel.cpp
M  +2    -1    applets/kickoff/core/models.cpp
M  +3    -2    applets/kickoff/core/models.h
M  +1    -1    applets/kickoff/package/contents/ui/KickoffItem.qml

http://commits.kde.org/plasma-desktop/1e7382b7bc75ada7b21e7e74349dfca5bfd0d3f1
Comment 2 Marco Martin 2014-10-01 11:53:43 UTC
Git commit 355ebb49ecfdabbe957f9ec7643292993cf3498f by Marco Martin.
Committed on 01/10/2014 at 09:52.
Pushed by mart into branch 'Plasma/5.1'.

use the runner match querydata if available

M  +1    -0    applets/kickoff/core/kickoffmodel.cpp
M  +6    -1    applets/kickoff/core/krunnermodel.cpp
M  +2    -1    applets/kickoff/core/models.cpp
M  +3    -2    applets/kickoff/core/models.h
M  +1    -1    applets/kickoff/package/contents/ui/KickoffItem.qml

http://commits.kde.org/plasma-desktop/355ebb49ecfdabbe957f9ec7643292993cf3498f