use the runner match querydata if available

BUG:339477